# Aurelia

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FILES_REVIEWED.md  Heroic Compability.md  LICENSE  README.md  RELEASE.md  USAGE.md  WINDOWS_STEAM_RUNTIME.md  build.rs
.github/workflows/: release.yml  rust.yaml
proto/: service_cloudconfigstore.proto
src/: cli.rs  cloud_sync.rs  config.rs  depot_browser.rs  lib.rs  library.rs  local_library.rs  luxtorpeda.rs  main.rs  main_tests.rs  models.rs  output.rs  proc_admin.rs  progress.rs  proton.rs  relocate.rs  running.rs  steam_client.rs  steam_client_tests.rs  store.rs  umu.rs  utils.rs  web_session.rs
src/commands/: auth.rs  cloud.rs  collections.rs  common.rs  config.rs  info.rs  install.rs  install_downgrade_tests.rs  launch.rs  library.rs  market.rs  mod.rs  plugins.rs  runtimes.rs  scripts.rs  social.rs  workshop.rs
src/compat/: luxtorpeda.rs  luxtorpeda_tests.rs  mod.rs  proc_admin.rs  proc_admin_tests.rs  proton.rs  proton_tests.rs  running.rs  umu.rs  umu_tests.rs
src/core/: config.rs  config_tests.rs  mod.rs  models.rs  net.rs  net_tests.rs  output.rs  utils.rs  utils_resolve_runner_tests.rs  utils_runner_classification_tests.rs
src/daemon/: client.rs  client_tests.rs  daemon_tests.rs  mod.rs  proto.rs  server.rs  transport.rs
src/infra/logging/: cli.rs  cli_tests.rs  debug_utils.rs  event_log.rs  mod.rs  session.rs  tests.rs  wine_capture.rs
src/infra/runners/: luxtorpeda.rs  mod.rs  tests.rs  trait.rs  umu.rs  wine_tkg.rs
src/launch/: dll_provider_resolver.rs  dll_provider_resolver_tests.rs  launch_script.rs  launch_script_tests.rs  mod.rs  pipeline.rs  pipeline_tests.rs  verification_tests.rs
src/launch/fixups/: fixups_tests.rs  mod.rs
src/launch/stages/: apply_launch_script.rs  apply_launch_script_tests.rs  build_command.rs  mod.rs  preflight.rs  preflight_tests.rs  prepare_prefix.rs  resolve_components.rs  resolve_dll_providers.rs  resolve_game_fixups.rs  spawn_process.rs
src/launch/validators/: invariants.rs  overrides.rs
src/steam_client/: chat.rs  client.rs  cloudconfig.rs  collections.rs  content.rs  friends.rs  friends_tests.rs  install.rs  launch.rs  library.rs  library_update_detection_tests.rs  manage.rs  manifests.rs  market.rs  process.rs  workshop.rs  workshop_manifest.rs  workshop_manifest_tests.rs
src/web/: cm_list.rs  mod.rs  openid.rs  openid_tests.rs  steam_urls.rs  steam_urls_tests.rs  web_session.rs  web_token.rs  web_token_tests.rs
tests/: compat_discovery.rs  compatibility_validator_tests.rs  config_game_steam_runtime.rs  config_load_errors.rs  dll_override_tests.rs  dll_resolution_report.rs  dxvk_evidence_tests.rs  launch_summary_tests.rs  path_resolution.rs  preflight_integration_tests.rs  runner_root_derivation.rs  staged_launch_failure_tests.rs  steam_runtime_install.rs  steam_runtime_runner_config.rs  symlink_deployment.rs  umu_runner_tests.rs
