[package]
name = "aurelia"
version = "0.1.22"
edition = "2024"
description = "Aurelia CLI Steam launcher"
license = "GPL 3.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
directories = "6" # Match steam-vent's directories version so only one copy is linked
rpassword = "7"
keyvalues-serde = "0.2" # Used for text VDF deserialization into structs
prost = "0.13"
protobuf = "3.5" # rust-protobuf runtime; matches steam-vent-proto's MessageField/EnumOrUnknown so we can build StoreBrowse requests
rand = "0.10" # Match steam-vent's rand version so only one copy is linked
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steam-vdf-parser = "0.1.1" # Needed for raw binary PICS VDF parsing (not supported by keyvalues-serde or steam-vent yet)
steam-vent = "0.5"
steam-vent-proto = "=0.5.2" # proto is no longer re-exported as steam_vent::proto since 0.5; depend on it directly
steam-vent-proto-common = "0.5.1" # RpcMethod/RpcMessage traits, to hand-wire the CloudConfigStore RPC (library collections) not shipped in steam-vent-proto
steam-vent-chat = { path = "vendor/steam-vent-chat" } # Vendored fork (ported to steam-vent 0.5) for friend chat; see vendor/steam-vent-chat/Cargo.toml
steamid-ng = "3" # Construct SteamIDs (from u64 / string) to pass to steam-vent-chat; matches steam-vent's steamid-ng
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "net", "io-util", "sync", "io-std", "process"] }
tokio-stream = "0.1" # Consume steam-vent's notification broadcast streams (friend chat events)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2"
filetime = "0.2" # Stamp downloaded Cloud saves with their cloud mtime so re-sync doesn't churn
zip = "2.2.2"
tar = "0.4" # Extract downloaded Proton/Wine-GE runtime tarballs (.tar.gz/.tar.xz)
hex = "0.4"
sha1 = "0.10"
flate2 = "1"
xz2 = "0.1"
cbc = "0.1"
aes = "0.8"
steam-cdn = "1.0.0"
libc = "0.2"
regex = "1"
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk"] } # Enumerate/kill aurelia processes for `kill`/`daemon`; `disk` for library free-space checks
qrcode = { version = "0.14", default-features = false } # Terminal QR rendering for `login --qr`

[build-dependencies]
# Pure-Rust protobuf codegen (no protoc) for the CloudConfigStore messages used by
# library collections; version tracks the `protobuf` runtime above.
protobuf-codegen = "3.5"

[target.'cfg(windows)'.dependencies]
# Used to stop the detached daemon from inheriting the spawning process's stdio
# handles (otherwise a parent like Heroic never sees EOF and hangs).
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console"] }

[patch.crates-io]
steam-cdn = { path = "vendor/steam-cdn" }
# Use the official steam-vent (Robin Appelman / icewind) from Codeberg, pinned to the
# v0.5.0 release tag. Patching crates.io ensures both this crate and the vendored
# steam-cdn resolve to the same steam-vent so their shared connection types unify.
steam-vent = { git = "https://codeberg.org/steam-vent/steam-vent.git", tag = "v0.5.0" }

[profile.release]
opt-level = "z"      # optimize for size
lto = "thin"          # whole-program inlining + cross-crate dead-code elimination
codegen-units = 1    # better cross-module optimization (slower compile)
panic = "abort"      # drop unwinding tables & landing pads
strip = "symbols"    # strip symbol/debug info from the binary

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
name = "aurelia"
maintainer = "Aurelia Contributors"
copyright = "2026, Aurelia Contributors"
license-file = "LICENSE"
section = "games"
priority = "optional"
depends = "$auto, libssl3"
assets = [
    ["target/release/aurelia", "usr/bin/aurelia", "755"],
]
